fix: color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,17 +78,18 @@ article .content {
 }
 article .content a {
   display: inline-block;
-  color: black;
-  background: white;
+  color: white;
+  background: #333333;
   padding: 0.5rem;
   margin: 0.5rem 0;
   text-decoration: none;
   font-weight: 600;
   outline: 4px solid transparent;
-  transition: color 0.5s ease-in-out, outline 0.5s ease-in-out;
+  transition: color 0.6s ease-in-out, background 0.6s ease-in-out, outline 0.6s ease-in-out;
 }
 article .content a:focus, article .content a:hover {
   color: #9E009E;
+  background: white;
   outline: 4px solid #9E009E;
 }
 @media only screen and (min-width: 768px) {
